-- Operational workflow for each real treatment application.
-- The application identity is always patient + treatment + cycle + protocol day.

INSERT INTO local_permissions (permission_key, display_name, description) VALUES
  ('application.pharmacy.manage', 'Gestionar validacion y stock', 'Validar la orden, definir la fuente de medicacion y reservar o liberar stock por aplicacion.'),
  ('application.schedule.manage', 'Gestionar turnos de aplicaciones', 'Asignar, mover o retirar aplicaciones del turnero por sillon.'),
  ('application.triage.manage', 'Autorizar aplicacion clinica', 'Registrar triaje y emitir PASS o FAIL por aplicacion.'),
  ('application.preparation.manage', 'Gestionar preparacion esteril', 'Registrar preparacion, lotes, etiqueta, estabilidad y liberacion de mezclas.'),
  ('application.administration.manage', 'Administrar medicacion oncologica', 'Registrar doble control, inicio y cierre real de una aplicacion.')
ON CONFLICT (permission_key) DO UPDATE SET
  display_name = EXCLUDED.display_name,
  description = EXCLUDED.description;

INSERT INTO local_role_permissions (role_id, permission_id)
SELECT r.id, p.id
  FROM local_roles r
  JOIN local_permissions p ON (
    r.role_key = 'administrator'
    OR (r.role_key = 'pharmacy' AND p.permission_key IN (
      'application.pharmacy.manage', 'application.preparation.manage'))
    OR (r.role_key = 'admissions' AND p.permission_key = 'application.schedule.manage')
    OR (r.role_key = 'oncologist' AND p.permission_key = 'application.triage.manage')
    OR (r.role_key = 'nursing' AND p.permission_key IN (
      'application.triage.manage', 'application.administration.manage'))
  )
 WHERE p.permission_key IN (
   'application.pharmacy.manage',
   'application.schedule.manage',
   'application.triage.manage',
   'application.preparation.manage',
   'application.administration.manage')
ON CONFLICT DO NOTHING;

CREATE TABLE pharmacy_inventory_lots (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  drug_id varchar(255),
  drug_name varchar(500) NOT NULL,
  lot_number varchar(255) NOT NULL,
  expiration_date date NOT NULL,
  quantity_on_hand numeric(16,4) NOT NULL CHECK (quantity_on_hand >= 0),
  quantity_reserved numeric(16,4) NOT NULL DEFAULT 0
    CHECK (quantity_reserved >= 0 AND quantity_reserved <= quantity_on_hand),
  quantity_unit varchar(64) NOT NULL,
  inventory_status varchar(24) NOT NULL DEFAULT 'active'
    CHECK (inventory_status IN ('active','quarantined','depleted','discarded')),
  notes varchar(2000),
  revision bigint NOT NULL DEFAULT 1 CHECK (revision > 0),
  created_by bigint NOT NULL REFERENCES local_users(id),
  updated_by bigint NOT NULL REFERENCES local_users(id),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  CONSTRAINT uq_pharmacy_inventory_lot
    UNIQUE NULLS NOT DISTINCT (drug_id, drug_name, lot_number, expiration_date, quantity_unit)
);
CREATE INDEX idx_pharmacy_inventory_available
  ON pharmacy_inventory_lots (lower(drug_name), expiration_date)
  WHERE inventory_status = 'active';

CREATE TABLE treatment_application_workflows (
  patient_id bigint NOT NULL,
  treatment_id varchar(255) NOT NULL,
  cycle_number smallint NOT NULL,
  application_day smallint NOT NULL,
  workflow_status varchar(32) NOT NULL DEFAULT 'prescribed'
    CHECK (workflow_status IN (
      'prescribed','pharmacy_rejected','medication_pending','medication_ready',
      'scheduled','triage_pending','clinically_authorized','postponed',
      'in_preparation','prepared','released','in_administration','completed','cancelled')),
  medication_source varchar(32) NOT NULL DEFAULT 'pending_supplier'
    CHECK (medication_source IN (
      'center_stock','patient_to_bring','patient_has_medication',
      'received_center','pending_supplier')),
  pharmacy_validation_status varchar(16) NOT NULL DEFAULT 'pending'
    CHECK (pharmacy_validation_status IN ('pending','approved','rejected')),
  pharmacy_validation_notes varchar(3000),
  pharmacy_validated_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  pharmacy_validated_at timestamptz,
  stock_reservation_status varchar(20) NOT NULL DEFAULT 'none'
    CHECK (stock_reservation_status IN (
      'none','pending_verification','reserved','released','consumed','not_applicable')),
  stock_reservation_notes varchar(3000),
  stock_reserved_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  stock_reserved_at timestamptz,
  stock_released_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  stock_released_at timestamptz,
  clinical_authorization_status varchar(16) NOT NULL DEFAULT 'pending'
    CHECK (clinical_authorization_status IN ('pending','passed','failed')),
  clinical_authorization_reason varchar(3000),
  clinical_assessment jsonb NOT NULL DEFAULT '{}'::jsonb,
  clinically_authorized_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  clinically_authorized_at timestamptz,
  preparation_status varchar(20) NOT NULL DEFAULT 'not_started'
    CHECK (preparation_status IN (
      'not_started','in_preparation','prepared','released','cancelled')),
  preparation_data jsonb NOT NULL DEFAULT '{}'::jsonb,
  preparation_started_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  preparation_started_at timestamptz,
  prepared_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  preparation_verified_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  prepared_at timestamptz,
  preparation_released_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  preparation_released_at timestamptz,
  preparation_expires_at timestamptz,
  preparation_restart_count integer NOT NULL DEFAULT 0
    CHECK (preparation_restart_count >= 0),
  administration_status varchar(20) NOT NULL DEFAULT 'not_started'
    CHECK (administration_status IN (
      'not_started','in_progress','completed','withheld','cancelled')),
  administration_data jsonb NOT NULL DEFAULT '{}'::jsonb,
  administration_started_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  administration_second_checker_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  administration_started_at timestamptz,
  administration_completed_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  administration_completed_at timestamptz,
  revision bigint NOT NULL DEFAULT 1 CHECK (revision > 0),
  updated_by bigint NOT NULL REFERENCES local_users(id),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  PRIMARY KEY (patient_id, treatment_id, cycle_number, application_day),
  FOREIGN KEY (patient_id, treatment_id, cycle_number, application_day)
    REFERENCES treatment_application_logistics
      (patient_id, treatment_id, cycle_number, application_day)
    ON DELETE CASCADE
);
CREATE INDEX idx_application_workflow_pharmacy
  ON treatment_application_workflows
    (pharmacy_validation_status, medication_source, workflow_status);
CREATE INDEX idx_application_workflow_triage
  ON treatment_application_workflows
    (clinical_authorization_status, workflow_status);

CREATE TABLE application_stock_reservations (
  id uuid PRIMARY KEY,
  patient_id bigint NOT NULL,
  treatment_id varchar(255) NOT NULL,
  cycle_number smallint NOT NULL,
  application_day smallint NOT NULL,
  component_key varchar(255) NOT NULL,
  drug_id varchar(255),
  drug_name varchar(500) NOT NULL,
  requested_quantity numeric(16,4),
  requested_quantity_text varchar(500),
  reserved_quantity numeric(16,4),
  quantity_unit varchar(64),
  medication_source varchar(32) NOT NULL
    CHECK (medication_source IN (
      'center_stock','patient_to_bring','patient_has_medication',
      'received_center','pending_supplier')),
  reservation_status varchar(20) NOT NULL DEFAULT 'pending'
    CHECK (reservation_status IN ('pending','reserved','released','consumed','cancelled')),
  verification_method varchar(20) NOT NULL DEFAULT 'pending'
    CHECK (verification_method IN ('pending','inventory','manual','patient')),
  inventory_lot_id bigint REFERENCES pharmacy_inventory_lots(id) ON DELETE RESTRICT,
  verification_notes varchar(3000),
  verified_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  verified_at timestamptz,
  released_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  released_at timestamptz,
  consumed_at timestamptz,
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  FOREIGN KEY (patient_id, treatment_id, cycle_number, application_day)
    REFERENCES treatment_application_workflows
      (patient_id, treatment_id, cycle_number, application_day)
    ON DELETE CASCADE,
  CONSTRAINT chk_application_stock_quantities CHECK (
    (requested_quantity IS NULL OR requested_quantity > 0)
    AND (reserved_quantity IS NULL OR reserved_quantity > 0))
);
CREATE UNIQUE INDEX uq_application_stock_active_component
  ON application_stock_reservations
    (patient_id, treatment_id, cycle_number, application_day, component_key)
  WHERE reservation_status IN ('pending','reserved');
CREATE INDEX idx_application_stock_inventory_lot
  ON application_stock_reservations (inventory_lot_id, reservation_status)
  WHERE inventory_lot_id IS NOT NULL;

CREATE TABLE application_preparation_lots (
  id uuid PRIMARY KEY,
  patient_id bigint NOT NULL,
  treatment_id varchar(255) NOT NULL,
  cycle_number smallint NOT NULL,
  application_day smallint NOT NULL,
  stock_reservation_id uuid REFERENCES application_stock_reservations(id) ON DELETE RESTRICT,
  inventory_lot_id bigint REFERENCES pharmacy_inventory_lots(id) ON DELETE RESTRICT,
  drug_name varchar(500) NOT NULL,
  lot_number varchar(255) NOT NULL,
  expiration_date date NOT NULL,
  quantity numeric(16,4),
  quantity_text varchar(500),
  quantity_unit varchar(64),
  diluent varchar(500),
  final_volume varchar(255),
  concentration varchar(255),
  ttl_minutes integer NOT NULL CHECK (ttl_minutes BETWEEN 1 AND 10080),
  preparation_status varchar(16) NOT NULL DEFAULT 'active'
    CHECK (preparation_status IN ('active','discarded')),
  discarded_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  discarded_at timestamptz,
  discard_reason varchar(3000),
  prepared_by bigint NOT NULL REFERENCES local_users(id),
  verified_by bigint NOT NULL REFERENCES local_users(id),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  FOREIGN KEY (patient_id, treatment_id, cycle_number, application_day)
    REFERENCES treatment_application_workflows
      (patient_id, treatment_id, cycle_number, application_day)
    ON DELETE CASCADE
);
CREATE INDEX idx_application_preparation_trace
  ON application_preparation_lots
    (patient_id, treatment_id, cycle_number, application_day, created_at);

CREATE TABLE treatment_application_workflow_events (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  patient_id bigint NOT NULL,
  treatment_id varchar(255) NOT NULL,
  cycle_number smallint NOT NULL,
  application_day smallint NOT NULL,
  action varchar(64) NOT NULL,
  idempotency_key varchar(128) NOT NULL,
  actor_user_id bigint REFERENCES local_users(id) ON DELETE SET NULL,
  expected_revision bigint NOT NULL,
  resulting_revision bigint NOT NULL,
  command_json jsonb NOT NULL,
  before_json jsonb NOT NULL,
  after_json jsonb NOT NULL,
  occurred_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  FOREIGN KEY (patient_id, treatment_id, cycle_number, application_day)
    REFERENCES treatment_application_workflows
      (patient_id, treatment_id, cycle_number, application_day)
    ON DELETE RESTRICT,
  CONSTRAINT uq_application_workflow_idempotency
    UNIQUE (patient_id, treatment_id, cycle_number, application_day, idempotency_key)
);
CREATE INDEX idx_application_workflow_events_application
  ON treatment_application_workflow_events
    (patient_id, treatment_id, cycle_number, application_day, occurred_at DESC);

CREATE OR REPLACE FUNCTION initialize_treatment_application_workflow()
RETURNS trigger
LANGUAGE plpgsql
AS $$
BEGIN
  INSERT INTO treatment_application_workflows (
    patient_id, treatment_id, cycle_number, application_day,
    workflow_status, medication_source, stock_reservation_status,
    updated_by, created_at, updated_at
  ) VALUES (
    NEW.patient_id, NEW.treatment_id, NEW.cycle_number, NEW.application_day,
    'prescribed',
    CASE NEW.medication_state
      WHEN 'with_patient' THEN 'patient_has_medication'
      WHEN 'received' THEN 'received_center'
      ELSE 'pending_supplier'
    END,
    CASE
      WHEN NEW.medication_state IN ('with_patient','received') THEN 'not_applicable'
      ELSE 'none'
    END,
    NEW.updated_by, clock_timestamp(), clock_timestamp()
  )
  ON CONFLICT DO NOTHING;
  RETURN NEW;
END;
$$;

CREATE TRIGGER trg_initialize_treatment_application_workflow
AFTER INSERT ON treatment_application_logistics
FOR EACH ROW EXECUTE FUNCTION initialize_treatment_application_workflow();

INSERT INTO treatment_application_workflows (
  patient_id, treatment_id, cycle_number, application_day,
  workflow_status, medication_source, pharmacy_validation_status,
  stock_reservation_status, clinical_authorization_status,
  preparation_status, administration_status,
  updated_by, created_at, updated_at
)
SELECT l.patient_id, l.treatment_id, l.cycle_number, l.application_day,
       CASE
         WHEN session.administration_status = 'completed'
           OR session.clinical_status = 'completed' THEN 'completed'
         WHEN session.administration_status = 'in_progress' THEN 'in_administration'
         WHEN session.pharmacy_status = 'in_preparation' THEN 'in_preparation'
         -- Legacy ready/released sessions have no preparation lots or TTL.
         -- Keep the clinical gate, but require a new traceable preparation.
         WHEN session.pharmacy_status IN ('ready','released')
           AND session.clinical_status IN ('ready','in_progress','observation')
           THEN 'clinically_authorized'
         WHEN session.pharmacy_status IN ('ready','released') THEN 'scheduled'
         WHEN session.id IS NOT NULL THEN 'scheduled'
         ELSE 'prescribed'
       END,
       CASE l.medication_state
         WHEN 'with_patient' THEN 'patient_has_medication'
         WHEN 'received' THEN 'received_center'
         ELSE 'pending_supplier'
       END,
       CASE WHEN session.id IS NOT NULL THEN 'approved' ELSE 'pending' END,
       CASE
         WHEN l.medication_state IN ('with_patient','received') THEN 'not_applicable'
         ELSE 'none'
       END,
       CASE
         WHEN session.administration_status IN ('in_progress','completed')
           OR session.clinical_status IN ('ready','in_progress','observation','completed')
           THEN 'passed'
         ELSE 'pending'
       END,
       CASE session.pharmacy_status
         WHEN 'in_preparation' THEN 'in_preparation'
         -- A completed or already-started legacy administration is historical.
         -- Every not-yet-started ready/released application must be prepared
         -- again so lots, verifier and TTL are captured before administration.
         WHEN 'ready' THEN CASE
           WHEN session.administration_status IN ('in_progress','completed')
             OR session.clinical_status = 'completed' THEN 'prepared'
           ELSE 'not_started'
         END
         WHEN 'released' THEN CASE
           WHEN session.administration_status IN ('in_progress','completed')
             OR session.clinical_status = 'completed' THEN 'released'
           ELSE 'not_started'
         END
         WHEN 'cancelled' THEN 'cancelled'
         ELSE 'not_started'
       END,
       COALESCE(session.administration_status, 'not_started'),
       l.updated_by, l.created_at, l.updated_at
  FROM treatment_application_logistics l
  LEFT JOIN LATERAL (
    SELECT s.id, s.clinical_status, s.pharmacy_status, s.administration_status
      FROM unified_infusion_sessions s
     WHERE s.patient_id = l.patient_id
       AND s.treatment_id = l.treatment_id
       AND s.cycle_number = l.cycle_number
       AND s.application_day = l.application_day
       AND s.clinical_status <> 'cancelled'
     ORDER BY
       s.scheduled_at DESC NULLS LAST,
       s.id DESC
     LIMIT 1
  ) session ON true
ON CONFLICT DO NOTHING;
